--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,59 @@
-body {
+:root {
+  --input-padding-x: .75rem;
+  --input-padding-y: .75rem;
+}
+
+html, body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  min-height: 100%;
+}
+
+.form-signin, .list {
+  width: 100%;
+  max-width: 400px;
+}
+
+.form-group {
+  position: relative;
+}
+
+.form-group > input,
+.form-group > label {
+  padding: var(--input-padding-y) var(--input-padding-x);
+}
+
+.form-group > label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+  line-height: 1.5;
+  color: #495057;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  transition: all .1s ease-in-out;
+}
+
+.form-group input::placeholder {
+  color: transparent;
+}
+
+.form-group input:not(:placeholder-shown) {
+  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-bottom: calc(var(--input-padding-y) / 3);
+}
+
+.form-group input:not(:placeholder-shown) ~ label {
+  padding-top: calc(var(--input-padding-y) / 3);
+  padding-bottom: calc(var(--input-padding-y) / 3);
+  font-size: 12px;
+  color: #777;
+}
+
+.form-group input:invalid:not(:focus):not(:placeholder-shown) {
+  border-color: var(--danger);
 }
